[gd_scene load_steps=7 format=2]

[ext_resource path="res://Recursos/Visuales/Sprites/ventana_virus.png" type="Texture" id=1]
[ext_resource path="res://Codigos/Locales/Objetos/VirusWikii.gd" type="Script" id=2]
[ext_resource path="res://Recursos/Sonoros/Incidentales/clicBien.wav" type="AudioStream" id=4]
[ext_resource path="res://Recursos/Sonoros/Incidentales/clic.wav" type="AudioStream" id=5]
[ext_resource path="res://Recursos/Sonoros/Incidentales/clicMal.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 72.2726, 80.043 )

[node name="VirusWiki" type="RigidBody2D"]
script = ExtResource( 2 )

[node name="WikiV" type="Sprite" parent="."]
position = Vector2( 1090, 184 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1085.82, 181.918 )
shape = SubResource( 1 )

[node name="AudoClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Tween" type="Tween" parent="."]

[node name="ClicBien" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="ClicMal" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
